syntax = "proto3";
package protobuf;

option go_package = ".;makeless";

import "validate/validate.proto";

message UpdatePasswordRequest {
  string password = 1 [(validate.rules).string = {min_len: 6, max_len: 50}];
  string newPassword = 2 [(validate.rules).string = {min_len: 6, max_len: 50}];
}

message UpdatePasswordResponse {
}

service PasswordService {
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
}